[package] Added `luxon` dependency

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vue/cli-service": "^4.5.10",
     "@vue/compiler-sfc": "^3.0.5",
     "cross-env": "^7.0.3",
+    "luxon": "^2.0.2",
     "minimist": "^1.2.5",
     "postcss": "^8.2.3",
     "rollup": "^2.36.1",
